ignore changes to Colours in Astronomy

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ plot_sdss_filters_11.png
 
 /Gravitational Simulations
 /Stellar Spectra
+/Colours_in_Astronomy
 
 galaxy_catalogue.npy
 Untitled.ipynb
